--- a/Fb/public/stylesheets/add_customer_style.css
+++ b/Fb/public/stylesheets/add_customer_style.css
@@ -1,9 +1,19 @@
-//add customer stylesheet
 
 body {font-family: Arial, Helvetica, sans-serif;}
 
-input[type=text], select, textarea {
+input[type=text], input[type=password], select, textarea {
     width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type=Date]{
+    width: 20%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
