--- a/Fb/public/stylesheets/styles.css
+++ b/Fb/public/stylesheets/styles.css
@@ -159,44 +159,33 @@ html {
 }
 
  .container h3{
-  margin-top: 0 !important;
-  padding: 20px;
-  color: #666;
+    margin: 0 !important;
+    font-size: 16px;
+    color: #888888;
     font-family: sans-serif;
-    font-weight: 400;
+    font-weight: 100;
+    border: solid 2px #999;
+    padding: 13px;
   }
 
   .page-heading{
-  background: linear-gradient(-90deg, #666 0, #eee 100%);
+  height: 100%;
+  width: 100%;
+  background: #eeeeee;
 }
 
 #logo{
   float: left;
   font-family: sans-serif;
   font-size: 32px;
-  width: 5%;
+  width: 20%;
 }
 
 #admin_menu{
  
 }
 
-.div_menu{
-  width: 21%;
-  float: left;
-}
-.nav_menu{
-  margin: 0 auto;
-  width: 90%;
-}
 
-.nav_menu ul{
-  list-style: none;
-}
-
-.nav_menu ul li a{
- text-decoration: none;
-}
     
 
 
@@ -311,8 +300,7 @@ div #new_calls{
 }
 
 #right-header{
-  width: 87%;
-  background: lightslategrey;
+  width: 80%;
   float: right;
 }
 
@@ -330,3 +318,18 @@ div #new_calls{
 width:80%;
 margin: 0 auto;
 }
+
+
+#csv_upload_success{
+    color: #fff;
+    background: #CBF744;
+    padding: 10px;
+}
+
+.styled-select.slate {
+   height: 34px;
+   width: 240px;
+}
+
+
+
