--- a/Fb/public/stylesheets/styles.css
+++ b/Fb/public/stylesheets/styles.css
@@ -13,10 +13,11 @@ html {
   }
   
 #site-header{
-  height: 180px;
-  color: #fff;
-  width: 100%;
-  background: linear-gradient(-90deg, #345, #24BBCD);
+    border-bottom: 1px solid #eee;
+    height: 80px;
+    color: #444;
+    width: 100%;
+    background: #ffffff;
 }
 
   header {
@@ -169,21 +170,26 @@ html {
   }
 
   .page-heading{
-  height: 100%;
-  width: 100%;
-  background: #eeeeee;
+    margin-top: 10px;
+    height: 100%;
+    width: 100%;
+    background: #eeeeee;
 }
 
 #logo{
-  float: left;
-  font-family: sans-serif;
-  font-size: 32px;
-  width: 20%;
+    padding: 0px;
+    margin-left: 10px;
+    float: left;
+    width: 201px;
+}
+#logo h1{
+    font-family: 'Gloria Hallelujah', cursive !important;
+    font-size: 24px !important;
+    padding-left: 5px !important;
+    border: solid 1px #eee;
+    border-radius: 5px;
 }
 
-#admin_menu{
- 
-}
 
 
     
@@ -213,11 +219,13 @@ div #new_calls{
 #current_date{
   padding: 20px;
   float: right;  
+  cursor: progress;
 }
 
 #current_user{
-  padding: 20px;
+  padding: 12px;
   float: right;
+  cursor: progress;
 }
 
 #admin_menu{
@@ -294,14 +302,32 @@ div #new_calls{
 }
 
 #logout{
-    background: lightgrey;
     float: right;
     padding: 20px;
 }
 
+#logout:hover{
+  background: #333333;
+}
+
+#logout a:hover{
+  color: #fff;
+}
+
+#logout a{
+  text-decoration: none;
+  color: #888;
+}
+
 #right-header{
-  width: 80%;
+  padding: 10px;
+  width: 70%;
   float: right;
+}
+
+#right-header div{
+    margin: 2px;
+    border: 1px solid #ccc;
 }
 
 #measurement select{
@@ -330,6 +356,22 @@ margin: 0 auto;
    height: 34px;
    width: 240px;
 }
+
+#userimage{
+    border: none !important;
+    float: left;
+}
+
+#username{
+    border: none !important;
+    float: right;
+    overflow: hidden;
+}
+#username p{
+    margin: 0;
+    padding: 6px;
+}
+
 
 
 
